[package]
name = "dev"
version = "0.1.0"
authors = ["ahouts <ahouts4@gmail.com>"]
edition = "2018"

[dependencies]
mafia = { path = "../engine" }
actix = "0.8"
actix-web = "1.0"
actix-web-actors = "1.0"
uuid = { version = "0.7", features = ["v4"] }
serde = "1.0"
serde_json = "1.0"
env_logger = "0.6"
log = "0.4"
once_cell = "1.0"
